argocd-application-config/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: myapp
  namespace: backend
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 2
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: docker.io/datawire/quote:0.4.1
        ports:
        - containerPort: 8080
