argocd-application-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: backend
spec:
  selector:
    app: myapp 
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
