argocd-application-config/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-app1-ingress
  namespace: backend
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
    - hosts:
      - myapp.mohammedfuta2000.com
      secretName: letsencrypt-nginx-quote
  rules:
    - host: myapp.mohammedfuta2000.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-service 
                port:
                  number: 80
  ingressClassName: nginx
